--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,13 @@ buildscript {
     }
 }
 
+subprojects {
+    repositories {
+        mavenCentral()
+        maven { url 'http://devrepo.kakao.com:8088/nexus/content/groups/public/' }
+    }
+}
+
 allprojects {
     repositories {
         google()
