fix : 페이스북 로그인 연동 추가

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,4 +78,7 @@ dependencies {
     // 카카오 로그인 sdk를 사용하기 위해 필요.
     implementation group: 'com.kakao.sdk', name: 'usermgmt', version: '1.16.0'
 
+    // 페이스북
+    implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
+
 }
